--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        
 
         <a-camera>
-            <a-cursor></a-cursor>
+            <a-cursor color="#FFF"></a-cursor>
         </a-camera>
         <a-assets>
           <img id="textura" src="balloon.png"/>
@@ -77,13 +77,14 @@
       sound="on: click; src: url(splash.wav)">
       </a-sphere>
 
-        <!-- <a-sound src="src: url(Baboons-with-Balloons.mp3)" autoplay="true" position="0 2 5"></a-sound> -->
+        <a-sound src="src: url(Baboons-with-Balloons.mp3)" autoplay="true" position="0 2 5"></a-sound>
         <!-- <a-sky color="#eb4c24" src="https://c3.staticflickr.com/2/1475/26239222850_cabde81c39_k.jpg"></a-sky> -->
-        <a-sky  src="https://c3.staticflickr.com/2/1475/26239222850_cabde81c39_k.jpg"></a-sky>
+        <!-- <a-sky  src="https://c3.staticflickr.com/2/1475/26239222850_cabde81c39_k.jpg"></a-sky> -->
+        <a-sky  src="https://cdn.eso.org/images/publicationjpg/uhd-img-8535pv2-cc-eq-extended.jpg"></a-sky>
     </a-scene>
   </body>
   <script src="controller.js"></script>
 <script>
-  //render();
+  init();
 </script>
 </html>
