--- a/game.html
+++ b/game.html
@@ -17,6 +17,8 @@
     <script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v3.13.1/dist/aframe-extras.min.js"></script>
     <script src="https://rawgit.com/rdub80/aframe-gui/master/dist/aframe-gui.min.js"></script> 
     <script src="https://unpkg.com/aframe-aabb-collider-component@3.1.0/dist/aframe-aabb-collider-component.min.js"></script> 
+    <script src="https://rawgit.com/mayognaise/aframe-mouse-cursor-component/master/dist/aframe-mouse-cursor-component.min.js"></script>
+
 
     <script src="core.js"></script>
     <!-- <script src="move.js"></script> -->
@@ -33,7 +35,7 @@
         
         
         <a-camera>
-            <a-cursor 
+            <a-cursor mouse-cursor
               color="#FFF"
               cursor="fuse: true;fuseTimeout:300"
             />
@@ -124,9 +126,9 @@ $( document ).ready(function() {
 
       //verificar a lista de notas  (mostrar na tela para ele escolher)
       //http://localhost:8000/php/service.php?cod=promocenterrio&op=21&cliente=166
-      $.get("http://localhost:8000/php/service.php?cod=promocenterrio&op=21&cliente=166", function(data, status){
-        console.log("Data: " + data + "\nStatus: " + status);
-      });
+      // $.get("http://localhost:8000/php/service.php?cod=promocenterrio&op=21&cliente=166", function(data, status){
+      //   console.log("Data: " + data + "\nStatus: " + status);
+      // });
 
       setTimeout(function(e) {
         var frase = document.querySelector('#frase-2');
